--- a/composer.json
+++ b/composer.json
@@ -34,11 +34,11 @@
 
     "require": {
         "php": ">=7.1.0",
-        "psr/log": "~1.0"
+        "psr/log": ">=1.0"
     },
 
     "require-dev": {
-        "phpunit/phpunit": "^8.0 || ^7.0"
+        "phpunit/phpunit": "^9.0 || ^8.0 || ^7.0"
     },
 
     "autoload": {
